updates to text and figure

--- a/introduction.tex
+++ b/introduction.tex
@@ -24,7 +24,7 @@
 predicted - thus offering an excellent test of the nature of the coupling of the Higgs to fermions, as well as a potential probe into pysics \acrfull{bsm} that would alter this value from the \acrshort{sm} prediction.  The production of the Higgs boson in association with top-quark pairs is the best production mode at the \acrshort{lhc} that offers direct access to the top-Higgs coupling.  The dominant production mode of Higgs at the \acrshort{lhc}, gluon-gluon fusion, involves a triangle loop of strongly-coupled fermions, which includes all of the other quarks, as well as the potential for \acrshort{bsm} particles.  
 
 \par ~\ttH~production also has the ability to constrain some extensions of the \acrshort{sm} that would not modify the Higgs branching fractions enough to be seen 
-within current experiemental precision.  Such models include Little Higgs models, models with extra dimensions, top-color models, and compositie Higgs models that introduce a vector-like top partner, a $t'$, that can decay to $tH$, $bW$, or $tZ$ states.  Both $t't'$ and $t't$ production would produce a~\ttH~final state, or one that is indistinguishable from it ($tHbW$).  Upper limits on~\ttH~production would also provide limits on the previously described models, which would be complementary to existing direct searches for $t'$ particles, which attempt to reconstruct the $t'$ resonance.  
+within current experiemental precision.  Such models include Little Higgs models, models with extra dimensions, top-color models, and composite Higgs models that introduce a vector-like top partner, a $t'$, that can decay to $tH$, $bW$, or $tZ$ states.  Both $t't'$ and $t't$ production would produce a~\ttH~final state, or one that is indistinguishable from it ($tHbW$).  Upper limits on~\ttH~production would also provide limits on the previously described models, which would be complementary to existing direct searches for $t'$ particles, which attempt to reconstruct the $t'$ resonance.  
 
 \par The~\ttH~channel has a rich set of possible final states.  Each top-quark will decay to a $b$-quark and a $W$ boson.  The $W$ boson will subsequently decay to two quarks, or a lepton and a neutrino.  These decays are classified as either hadronic, semi-leptonic, or di-leptonic for zero, one, or both $t$ quarks decaying leptonically 
 respectively.  The Higgs may to decay to $b$-quark, $W$, $Z$, $\tau$, or $\gamma$ pairs.  In fact, this is one of the only production modes at the \acrshort{lhc} which 
