first draft of theoretical background chapter

--- a/definitions.sty
+++ b/definitions.sty
@@ -99,6 +99,10 @@
 \newcommand{\ttbar} {\ensuremath{t{\bar{t}}}}
 \newcommand{\ttjets} {\ensuremath{t{\bar{t}}+jets}}
 \newcommand{\ttbb}  {\ensuremath{t{\bar{t}}+b{\bar{b}}}}
+\newcommand{\ttlf}  {\ensuremath{t{\bar{t}}+lf}}
+
+\newcommand{\ttW}{\ensuremath{t{\bar{t}}W}}
+\newcommand{\ttZ}{\ensuremath{t{\bar{t}}Z}}
 
 \newcommand{\bbbar}{\ensuremath{b{\bar{b}}}}
 
