minor updates to text and images

--- a/theoretical_background.tex
+++ b/theoretical_background.tex
@@ -101,7 +101,7 @@ perturbation to the free field theory.  This implies every interaction
 between particles is carried out by a virtual mediating particle.  When two
 electrons scatter off one another, they are really exchanging a
 virtual photon, the mediator of the electromagnetic force.  The
-$W^{\pm} and Z$ bosons mediate the weak force, while the $gluons$
+$W^{\pm}$ and $Z$ bosons mediate the weak force, while the $gluons$
 mediate the strong force.  
 
 \begin{equation}\label{eq:lagrangian_free_interacting}
@@ -112,7 +112,7 @@ mediate the strong force.
 \par In order to calculate the probability and dynamics of two
 particles interacting with one another, an integral, constrained by
 energy and momentum conservation, over the phase space of outgoing
-particles and the scattering amplitude, $mathcal{M}$, is evaluated.
+particles and the scattering amplitude, $\mathcal{M}$, is evaluated.
 The scattering amplitude is calculated by using the propagtor (Green's
 function of the free particle theory) for the incoming, mediating, and
 outgoing particles, with an appropriate wieghting function, or vertex
@@ -329,7 +329,7 @@ two-component spinor:
 \noindent and have the commutation relation defined by:
 
 \begin{equation}\label{eq:pauli_matrices_commutator}
-[\frac{\sigma^{i}}{2}\text{, }\frac{\sigma^{j}}{2}] =
+\left[\frac{\sigma^{i}}{2}\text{, }\frac{\sigma^{j}}{2}\right] =
 i\epsilon^{ijk}\frac{\sigma^{k}}{2}
 \end{equation}
 
@@ -350,8 +350,8 @@ A_{\mu}^{i}\frac{\sigma^{i}}{2} \rightarrow
 A_{\mu}^{i}\frac{\sigma^{i}}{2} +
 \frac{1}{g}(\partial_{\mu}\alpha^{i})\frac{\sigma
 ^{i}}{2} +
-i[\frac{\alpha^{i}\sigma{i}}{2}\text{,
-}A_{\mu}^{i}\frac{\sigma^{i}}{2}]
+i\left[\frac{\alpha^{i}\sigma{i}}{2}\text{,
+}A_{\mu}^{i}\frac{\sigma^{i}}{2}\right]
 \end{equation}
 
 \noindent The third term, which was absent from the abelian form of
@@ -596,7 +596,7 @@ expanded about~\ref{eq:abelian_higgs_mechanism_potential_min}, the
 field, $\phi$ is rewritten as: 
 
 \begin{equation}\label{eq:abelian_higgs_mechanism_expanded_phi}
-\phi(x) = \phi_{0} + \frac{1}{\sqrt{2}}(\phi_{1}(x) + i\phi_{2}(x)
+\phi(x) = \phi_{0} + \frac{1}{\sqrt{2}}(\phi_{1}(x) + i\phi_{2}(x))
 \end{equation}
 
 \noindent the potential term, $V(x)$, then becomes:
@@ -869,7 +869,7 @@ doublet on the third generator of the group. The $SU(2)\otimes~U(1)$
 transformation, $U(x)$, will then be give by:   
 
 \begin{equation}\label{eq:ewk_su2_su1_transformation}
-U(x) = e^{i\alpha^{a}(x)\tau^{a}}e^{iY\alpha(x)/}
+U(x) = e^{i\alpha^{a}(x)\tau^{a}}e^{iY\alpha(x)}
 \end{equation}
 
 \noindent where $\tau^{a} = \sigma^{a}/2$, the Pauli matrices,
@@ -1728,6 +1728,32 @@ events enter from a mis-identification of one of the leptons from the
 $Z$ boson decay.  Extra FSR/ISR radiation is also to leave a similar
 signature in the signal region of a \ttH search, so it mainly
 contributes to control regions of the data.  
+
+\begin{figure}{b}
+    \centering
+    \begin{subfigure}[b]{0.45\textwidth}
+        \includegraphics[width=\textwidth]{Figures/Experimental_Results/CMS__VJets_TTbar__SigmaNew_v3.pdf}
+        \caption{CMS measurements of the $W,Z,t\bar{t}$ plus jets backgrounds}\label{fig:cms_results_VJets_TTJets}
+      \end{subfigure}
+      ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+      % (or a blank line to force the subfigure onto a new line)
+      \begin{subfigure}[b]{0.45\textwidth}
+        \includegraphics[width=\textwidth]{Figures/Experimental_Results/CMS__DibosonResullts__SigmaR_v5.pdf}
+        \caption{CMS measurements of DiBoson Production}\label{fig:cms_results_VV}
+      \end{subfigure}
+      \caption{Measurements of \ttH backgrounds at CMS} \label{fig:cms_results_backgrounds}
+\end{figure}
+
+\par All of these backgrounds have been measured at CMS.  With the
+exception of a small degree of tension in the $WW$ cross-section
+measurement, all backgrounds are in good agreement with Standard Model
+predictions.  Figure
+\ref{fig:cms_results_backgrounds}(\subref{fig:cms_results_VJets_TTJets})
+shows the results of CMS measurements on $V$+jets and \ttjets
+backgrounds.  Figure
+\ref{fig:cms_results_backgrounds}(\subref{fig:cms_results_VV}) shows
+the same, but for diBoson production.  
+ 
 
 \section{Potential BSM Effects on~\ttH~production}
 \label{bsm_effects_overview}
